--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-<h2>	<marquee direction="left">Welcome to Acciojobs!</marquee></h2>  
+<marquee direction="left"><h2>Welcome to Acciojobs!</h2></marquee>  
 	<h1><a href="https://acciojob.com/blog/">Blog</a></h1>
 	<br>
 	<a href="https://acciojob.com/blog/brute-force-vs-optimization/">
